intel/bench_214/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/log.txt
bench_214/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:45:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_FAST;
                       ^~~~~~~~~~~~~~~~
bench_214/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:81:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_FULL;
                       ^~~~~~~~~~~~~~~~
bench_214/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:85:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_MED;
                       ^~~~~~~~~~~~~~~
bench_214/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:87:9: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
        return UPDATE_TYPE_FAST;
               ^~~~~~~~~~~~~~~~
4 errors generated.
HLS FPGA Parse FAILED.
